--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="sign_up_name">Nome</string>
+    <string name="sign_up_email">Email</string>
+    <string name="sign_up_password">Senha</string>
+    <string name="sign_up">Criar conta</string>
+    <string name="sign_up_has_account">Já tem conta?</string>
+    <string name="sign_in">Entrar</string>
 </resources>
