--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="error_user_already_registered">Já existe um usuário cadastrado com esse email, faça login ou recupere sua senha</string>
     <string name="error_email_not_found">Email não encontrado, operação cancelada</string>
     <string name="error_default">Não foi possível completar sua ação. Tente novamente mais tarde</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
