--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_in_dont_have_account">Não tem conta?</string>
+    <string name="sign_in_forgot_password">Esqueceu a senha?</string>
 </resources>
